2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* cc-script.js (_showTab): Show the tab button of the selected
	tab.

	* cc-script.css (nav): Show scrollbar if there are too many
	tabs.

	* cc.cgi: Reset |$output->input| even if |$input->{s}| is undef (i.e.
	imlementation error case).

2008-08-16  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Error entries for
	Whatpm::URIChecker and Whatpm::LangTag error types
	are added.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Error entries
	for Whatpm::RDFXML errors are addded.  Missing entries
	for Whatpm::HTMLTable errors are added.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Missing entries for 
	Whatpm::ContentChecker::Atom errors are added.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Missing entries for
	Whatpm::ContentChecker and Whatpm::ContentChecker::HTML
	error types are added.  Error entries used by these
	modules are marked as such.

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Missing entries for Whatpm::HTML
	error types are added.  Error entries used by Whatpm::HTML
	are marked as "HTML::Parser".

2008-08-15  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Add icons to links and headings of error sections.
	Use standard "uncertain" color for level-u errors.  "No error found"
	messages are now handled by catalog, not by CSS presentation.
	The result paragraph saying that the conformance is unknown
	should be bordered as uncertain error messages are.

	* error-description-source.xml: New message entries
	for not-translated-yet messages.  Distinguish result table's
	layer names from other similar texts.

2008-08-14  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Generate result summary sections for
	each subdocument.

	* error-description-source.xml: New entries to
	support localization of result sections.

2008-08-14  Wakaba  <wakaba@suika.fam.cx>
